Fixed resorting problem when changing sorting order while only looking at filtered objects

--- a/Info.plist
+++ b/Info.plist
@@ -26,7 +26,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>csv</string>
+	<string>comma</string>
 	<key>CFBundleIdentifier</key>
 	<string>se.ozymandias.${PRODUCT_NAME:identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
