Moved "Show Status Bar" to external settings

--- a/Settings.bundle/Root.plist
+++ b/Settings.bundle/Root.plist
@@ -36,7 +36,7 @@
 			<key>Key</key>
 			<string>showStatusBar</string>
 			<key>DefaultValue</key>
-			<false/>
+			<true/>
 			<key>TrueValue</key>
 			<true/>
 			<key>FalseValue</key>
