--- a/Info.plist
+++ b/Info.plist
@@ -38,10 +38,21 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.2</string>
+	<string>1.208</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>se.ozymandias.CSVTouch</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>csvtouch</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
