Added correct web view, links, and alternative parsing setting

--- a/Settings.bundle/Root.plist
+++ b/Settings.bundle/Root.plist
@@ -46,6 +46,26 @@
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
+			<string>Data</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Alternative Parsing</string>
+			<key>Key</key>
+			<string>useCorrectParsing</string>
+			<key>DefaultValue</key>
+			<false/>
+			<key>TrueValue</key>
+			<true/>
+			<key>FalseValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
 			<string>Troubleshooting</string>
 		</dict>
 		<dict>
