--- a/Settings.bundle/Root.plist
+++ b/Settings.bundle/Root.plist
@@ -72,6 +72,20 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
+			<string>Show Debug Info</string>
+			<key>Key</key>
+			<string>showDebugInfo</string>
+			<key>DefaultValue</key>
+			<false/>
+			<key>TrueValue</key>
+			<true/>
+			<key>FalseValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
 			<string>Safe Start</string>
 			<key>Key</key>
 			<string>safeStart</string>
