Fixed the sorting bug for MiB / MiB 2

--- a/Settings.bundle/Root.plist
+++ b/Settings.bundle/Root.plist
@@ -78,6 +78,20 @@
 		</dict>
 		<dict>
 			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Correct (Slow) Sorting</string>
+			<key>Key</key>
+			<string>useCorrectSorting</string>
+			<key>DefaultValue</key>
+			<false/>
+			<key>TrueValue</key>
+			<true/>
+			<key>FalseValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
 			<string>Troubleshooting</string>
