Removed prefs controller

--- a/Settings.bundle/Legal.plist
+++ b/Settings.bundle/Legal.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>Title</key>
-	<string>CSV Touch</string>
+	<string>Legal</string>
 	<key>StringsTable</key>
 	<string>Root</string>
 	<key>PreferenceSpecifiers</key>
