Smart clearing search pref added & Notice about 2.0 changes & Auto-showing of download file view if no files present

--- a/Settings.bundle/Appearance.plist
+++ b/Settings.bundle/Appearance.plist
@@ -68,7 +68,7 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
-			<string>Status Bar</string>
+			<string>Top Status Bar</string>
 			<key>Key</key>
 			<string>showStatusBar</string>
 			<key>DefaultValue</key>
