--- a/Settings.bundle/Sorting.plist
+++ b/Settings.bundle/Sorting.plist
@@ -12,7 +12,7 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
-			<string>Number Sensitive</string>
+			<string>Number Sensitive Sort</string>
 			<key>Key</key>
 			<string>numberSensitiveSorting</string>
 			<key>DefaultValue</key>
@@ -26,7 +26,7 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
-			<string>Case Sensitive</string>
+			<string>Case Sensitive Sort</string>
 			<key>Key</key>
 			<string>caseSensitiveSorting</string>
 			<key>DefaultValue</key>
@@ -54,11 +54,25 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
-			<string>Correct Sorting</string>
+			<string>Correct Sort</string>
 			<key>Key</key>
 			<string>useCorrectSorting</string>
 			<key>DefaultValue</key>
 			<false/>
+			<key>TrueValue</key>
+			<true/>
+			<key>FalseValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Smart Search Clearing</string>
+			<key>Key</key>
+			<string>clearSearchWhenQuickSelecting</string>
+			<key>DefaultValue</key>
+			<true/>
 			<key>TrueValue</key>
 			<true/>
 			<key>FalseValue</key>
