--- a/Settings.bundle/Appearance.plist
+++ b/Settings.bundle/Appearance.plist
@@ -26,6 +26,20 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
+			<string>Top Status Bar</string>
+			<key>Key</key>
+			<string>showStatusBar</string>
+			<key>DefaultValue</key>
+			<true/>
+			<key>TrueValue</key>
+			<true/>
+			<key>FalseValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
 			<string>Details Navigation</string>
 			<key>Key</key>
 			<string>useDetailsNavigation</string>
@@ -68,11 +82,11 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
-			<string>Top Status Bar</string>
+			<string>Confirm Link Click</string>
 			<key>Key</key>
-			<string>showStatusBar</string>
+			<string>confirmLink</string>
 			<key>DefaultValue</key>
-			<true/>
+			<false/>
 			<key>TrueValue</key>
 			<true/>
 			<key>FalseValue</key>
