Aligning columns in html view

--- a/Settings.bundle/Appearance.plist
+++ b/Settings.bundle/Appearance.plist
@@ -110,6 +110,20 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
+			<string>Align Fancy Details</string>
+			<key>Key</key>
+			<string>alignHtml</string>
+			<key>DefaultValue</key>
+			<true/>
+			<key>TrueValue</key>
+			<true/>
+			<key>FalseValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
 			<string>Allow Rotation</string>
 			<key>Key</key>
 			<string>allowRotation</string>
