Added pref for switching of phone links

--- a/Settings.bundle/Appearance.plist
+++ b/Settings.bundle/Appearance.plist
@@ -164,6 +164,20 @@
 		</dict>
 		<dict>
 			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Enable Phone Links</string>
+			<key>Key</key>
+			<string>enablePhoneLinks</string>
+			<key>DefaultValue</key>
+			<true/>
+			<key>TrueValue</key>
+			<true/>
+			<key>FalseValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
 			<string>PSMultiValueSpecifier</string>
 			<key>Title</key>
 			<string>Enhanced Details Size</string>
