--- a/CSV Lite-Info-iPad.plist
+++ b/CSV Lite-Info-iPad.plist
@@ -7,9 +7,9 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>icon.png</string>
+	<string>large_icon.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>se.ozymandias.csvlite</string>
+	<string>se.ozymandias.csvliteipad</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
