--- a/Info-iPad.plist
+++ b/Info-iPad.plist
@@ -28,7 +28,7 @@
 	<key>CFBundleIconFile</key>
 	<string>icon.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>se.ozymandias.csvtouch</string>
+	<string>se.ozymandias.csvtouchipad</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
