--- a/Settings.bundle/Legal.plist
+++ b/Settings.bundle/Legal.plist
@@ -12,7 +12,7 @@
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
-			<string>CSV Touch 2.2
+			<string>CSV Touch
 
 This software uses code from Michael B. Allen:
 
