1. Setting for daily download 2. Showing last download time per file 3. Simple mode

--- a/Settings.bundle/Appearance.plist
+++ b/Settings.bundle/Appearance.plist
@@ -240,6 +240,20 @@
 			<key>DefaultValue</key>
 			<string>0</string>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Simple mode</string>
+			<key>Key</key>
+			<string>simpleMode</string>
+			<key>DefaultValue</key>
+			<false/>
+			<key>TrueValue</key>
+			<true/>
+			<key>FalseValue</key>
+			<false/>
+		</dict>
 	</array>
 </dict>
 </plist>
