- Configurable background timeout for passwords - No separator

--- a/Settings.bundle/Appearance.plist
+++ b/Settings.bundle/Appearance.plist
@@ -244,6 +244,20 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
+			<string>No word separator</string>
+			<key>Key</key>
+			<string>blankWordSeparator</string>
+			<key>DefaultValue</key>
+			<false/>
+			<key>TrueValue</key>
+			<true/>
+			<key>FalseValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
 			<string>Simple mode</string>
 			<key>Key</key>
 			<string>simpleMode</string>
