--- a/Info-iPad.plist
+++ b/Info-iPad.plist
@@ -33,6 +33,7 @@
 	<array>
 		<string>large_icon.png</string>
 		<string>icon.png</string>
+		<string>icon_retina.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string>se.ozymandias.csvtouch</string>
@@ -56,13 +57,20 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>3.5</string>
+	<string>3.6</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
 	<key>UIFileSharingEnabled</key>
 	<true/>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
